--- a/public/css/login.css
+++ b/public/css/login.css
@@ -1,125 +1,120 @@
+*,
+*::before,
+*::after {
+    box-sizing: border-box;
+}
+
 body {
     background-color: #ffffff;
     -webkit-tap-highlight-color: rgba(112, 73, 186, 0.2);
 }
 
-.flex{
-    display: flex;
-    flex-direction: column;
-    align-content: center;
-    flex-wrap: wrap;
-}
-
-.page{
-    display: flex;
+.page {
     width: 100%;
-    height: 99vh;
+    height: 98vh;
+    display: flex;
+    gap: 3rem;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
-}
-
-.content{
-    display: block;
-    width: 100%;
-    background-color: #d3e7f2;
-    border-radius: 3rem;
-    padding: 3.5rem;
-    min-width: 22rem;
 }
 
 .logo {
-    display: flex;
-    justify-content: center;
-    margin-bottom: 20%;
+    width: 10rem;
 }
+
+.content {
+    display: block;
+    width: 25rem;
+    max-width: 100%;
+    padding: 1.5rem;
+    background-color: #d3e7f2;
+}
+
 
 .content-form {
-    display: grid;
-    background-color: #fff;
-    border-radius: 3rem;
-    width: 100%;
-}
-
-.form{
     display: flex;
     flex-direction: column;
-    height: 18rem;
-    justify-content: space-around;
-    align-content: center;
-    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+    gap: 2rem;
+    background-color: #fff;
+    border-radius: 25px;
+    padding: 4rem 2rem;
+}
+
+.form {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+    justify-content: center;
     align-items: center;
 }
 
-.group {
-    display: flex;
-    flex-direction: column;
+input {
+    border: none;
+    border-bottom: 1px solid;
+    color: #000;
+    font-size: 1rem;
+    width: 100%;
+    outline: none;
 }
 
-input{
-    border-width: 0 0 1px;
-    border-style: solid;
-    transition: all 0.3s;
-    vertical-align: top;
-    color: #00208f;
-    font-weight: bold;
-    font-size: 1.3rem;
-}
-
-input::placeholder{
+input::placeholder {
     color: #9f9f9f;
     font-size: 1rem;
+    font-weight: bold;
 }
 
-input:focus{
-    box-shadow: 0 -1px 0 0 #7049ba inset;
-    outline: none;
-    
+input:focus {
+    border-color: #d3e7f2;
+    border-width: 2px;
 }
 
 .title {
     display: block;
     text-align: center;
-    color: #99cdef;
-    font-size: 1rem;
+    color: #6ab9e8;
+    font-size: clamp(2.5em, -0.875em + 8.333333vw, 4em);
     font-weight: bold;
+    margin: 0;
     font-family: sans-serif;
     letter-spacing: 6px;
-    margin: 3rem 0;
 }
 
-.label-parent{
-    transform: scale(1.5);
-    color: #fff;
-}
-
-input.btn {
-    border: #6ab9e8 5px solid;
+.btn {
+    border: 2px solid transparent;
+    border-radius: 25px;
+    outline: none;
     background-color: #6ab9e8;
     color: #fff;
-    border-radius: 2rem;
-    width: 33%;
+    padding: 5px 2rem;
+    font-size: clamp(1em, -0.875em + 8.333333vw, 1.25em);
+    text-transform: uppercase;
+    transition: all .3s;
+    cursor: pointer;
+    font-weight: bold;
 }
 
-.error{
-    display: block;
-    width: 80%;
-    text-align: center;
-    margin: 0 auto 1rem auto;
-    height: 0;
+.btn:hover {
+    border: 2px solid #6ab9e8;
+    background-color: transparent;
+    color: #6ab9e8;
+    transition: all .3s;
+}
+
+.error {
+    display: none;
+    width: 90%;
+    text-align: center;  
     background-color: #eda0a0;
     color: #fff;
-    border-radius: 8px;
-    transition: all 1s;
+    border-radius: 8px; 
+    padding: 5px 1rem;
+    font-family: sans-serif;
 }
 
-.error span{
-    display: flex;
-    height: 100%;
-    flex-wrap: wrap;
-    align-content: center;
-    justify-content: center;
-}
-
-.show{
-    height: 2rem;
+.show {
+    display: block;
 }
